Archive/network-policies/zabbix/zabbix-network.yaml
# Zabbix Egress rules

# Zabbix Application Egress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zabbix-egress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zabbix
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: postgresql
              app.kubernetes.io/instance: zabbix
              app.kubernetes.io/name: zabbix
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: server
              app.kubernetes.io/instance: zabbix
              app.kubernetes.io/name: zabbix
      ports:
        - protocol: TCP
          port: 10051
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: homarr


---

# Ingress rules

# Zabbix Application Ingress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zabbix-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zabbix
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 8080

---

# Zabbix Server Ingress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zabbix-server-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: zabbix
      app.kubernetes.io/name: zabbix
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 10051
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: zabbix
      ports:
        - protocol: TCP
          port: 10051

---

# Zabbix Postgres Ingress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-zabbix-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: postgresql
      app.kubernetes.io/instance: zabbix
      app.kubernetes.io/name: zabbix
  policyTypes:
    - Ingress 
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: zabbix
      ports:
        - protocol: TCP
          port: 5432
